Fix(main page): sale section alignment and background

--- a/src/app/core/pages/main-page/main-page.component.scss
+++ b/src/app/core/pages/main-page/main-page.component.scss
@@ -51,10 +51,6 @@
   z-index: -1;
 }
 
-.bg-placeholder {
-  &::after { background-image: url('assets/img/main-bg.jpg'); }
-}
-
 .play-overlay {
   width: 100%; height: 100%;
   position: absolute;
@@ -201,7 +197,9 @@
   }
 }
 
-.main-bg-grey::after { background-image: url('assets/img/main-bg-grey.jpg'); }
+.bg-placeholder { &::after { background-image: url('assets/img/main-bg.jpg'); } }
+.ad-section-bg { background-image: url('assets/img/main-bg-grey.jpg'); }
+.sale-section-bg { background-image: url('https://img5.goodfon.com/wallpaper/nbig/7/18/wallpaper-background-4k-ultra-hd-graffiti-wall-paint-flowers.jpg'); }
 
 .benefit {
   width: 100%; height: 100%;
