--- a/src/app/shared/components/carousel-small/carousel-small.component.scss
+++ b/src/app/shared/components/carousel-small/carousel-small.component.scss
@@ -14,18 +14,10 @@ $btn-position-lg: 240px;
   overflow: hidden;
   position: relative;
   background-color: #fff;
-  @include breakpoint-up(md) {
-    height: 400px;
-  }
-  @include breakpoint-up(md) {
-    height: 600px;
-  }
-  @include breakpoint-up(lg) {
-    height: 800px;
-  }
-  &:hover {
-    .slider-ctrl { background-color: rgba(0, 0, 0, 0.8); }
-  }
+  @include breakpoint-up(md) { height: 400px; }
+  @include breakpoint-up(md) { height: 600px; }
+  @include breakpoint-up(lg) { height: 800px; }
+  &:hover { .slider-ctrl { background-color: rgba(0, 0, 0, 0.8); } }
 }
 
 .items {
